# summarization-crx

./: .prettierrc  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/: pull_request_template.md
secrets/: secrets.development.ts  secrets.production.ts
server/: .gitignore  app.py  asgi.py  pyproject.toml  requirements.txt  router.py  run.py  schema.py  service.py
server/scripts/: build.sh  entry_point.sh
src/: ajax.ts  constant.ts  domService.ts  flag.ts  language.ts  manifest.json  styles.scss  types.ts  utils.ts
src/components/: Button.scss  Button.tsx  ButtonGroup.scss  ButtonGroup.tsx  Collapsible.scss  Collapsible.tsx  Container.scss  Container.tsx  Dropdown.scss  Dropdown.tsx  Emoji.tsx  GridText.scss  GridText.tsx  HyperLinkText.scss  HyperLinkText.tsx  Icon.scss  Icon.tsx  InputGrid.scss  InputGrid.tsx  ProgressBar.scss  ProgressBar.tsx  Searchbar.scss  Searchbar.tsx  TextContainer.scss  TextContainer.tsx  TextInput.scss  TextInput.tsx  TextStatic.scss  TextStatic.tsx  TextareaInput.scss  TextareaInput.tsx  Tooltip.scss  Tooltip.tsx  index.ts  meta.ts  styles.scss
src/pages/Background/: Services.ts  index.js  offscreen.html  offscreen.js
src/pages/Content/: ErrorPage.scss  ErrorPage.tsx  Popup.scss  Popup.tsx  index.js
src/pages/Devtools/: index.js
src/pages/Popup/: Popup.scss  Popup.tsx  index.css  index.html  index.jsx
src/redux/: actions.ts  popup.ts  store.ts  types.tsx
utils/: build.js
