[tool.poetry]
name = "web-summarization"
version = "0.1.0"
description = ""
authors = ["Binh Le <lebinh190998@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "0.23.0"
fastapi = "0.100.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"

[build-system]
requires = ["poetry=1.5.1"]
build-backend = "poetry.core.masonry.api"
